# causal-armor

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: export_html.py  glassbox_demo.py  live_attack.html  live_attack.txt  live_benign.html  live_benign.txt  mock_attack.html  mock_attack.txt  mock_benign.html  mock_benign.txt
docs/: benchmark-results.md  cot-propagation-effect.md  how-attribution-works.md  multi-turn-cot-masking.md  openai-compatible-apis.md  paper-models-reference.md  vllm-setup.md
examples/: quickstart.py
src/causal_armor/: __init__.py  attribution.py  config.py  context.py  defense.py  detection.py  exceptions.py  middleware.py  types.py
src/causal_armor/prompts/: __init__.py  sanitization.py
src/causal_armor/providers/: __init__.py  _protocols.py  anthropic.py  gemini.py  litellm.py  openai.py  vllm.py
tests/: conftest.py  test_attribution.py  test_context.py  test_defense.py  test_detection.py  test_middleware.py  test_providers_vllm.py
